WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75651
[chromium] Resize requests at the view level should be ignored when in autoresize mode.
https://bugs.webkit.org/show_bug.cgi?id=75651
Summary
[chromium] Resize requests at the view level should be ignored when in autore...
David Levin
Reported
2012-01-05 14:49:21 PST
Follow up from
http://code.google.com/p/chromium/issues/detail?id=106478
Basically some code in Chromium tries to resize the view but in autoresize mode this doesn't make sense, so we'll just ignore it.
Attachments
Patch
(1.62 KB, patch)
2012-01-05 14:52 PST
,
David Levin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Levin
Comment 1
2012-01-05 14:52:01 PST
Created
attachment 121335
[details]
Patch
Jenn Braithwaite
Comment 2
2012-01-05 14:55:43 PST
Thanks! Too bad I don't have r+ power.
WebKit Review Bot
Comment 3
2012-01-05 16:32:42 PST
Comment on
attachment 121335
[details]
Patch Clearing flags on attachment: 121335 Committed
r104241
: <
http://trac.webkit.org/changeset/104241
>
WebKit Review Bot
Comment 4
2012-01-05 16:32:46 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug