[chromium] Resize requests at the view level should be ignored when in autoresize mode. https://bugs.webkit.org/show_bug.cgi?id=75651

Reviewed by Dmitry Titov.

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::resize): The assert was here to catch a view that
tried to do a resize after setting autoresize. However, we found that generic
code tries to do resizes as well. Rather than special case each caller,
we'll just make this code ignore the resize call.


Canonical link: https://commits.webkit.org/92459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104241 268f45cc-cd09-0410-ab3c-d52691b4dbfc